kcms/gamecontroller: Show positions of POV hats under Axes table

On many gamepads D-pad is actually exposed as a joystick POV hat instead
of four regular buttons. Unfortunately, the current implementation
completely ignores POV hats / D-pads and doesn't show them in UI.

This commit adds new class HatModel that provides raw position data from
POV hats. Each POV hat is mapped to a pair of X/Y model rows. Both axes
values and hat positions are now displayed under Axes table using new
class AxesProxyModel.

BUG: 494705